k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codesnap-fe
  labels:
    app: codesnap-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codesnap-fe
  template:
    metadata:
      labels:
        app: codesnap-fe
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: codesnap-fe
          image: 239861161036.dkr.ecr.eu-central-1.amazonaws.com/codesnap/codesnapfe:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            requests:
              cpu: '50m'
              memory: '64Mi'
            limits:
              cpu: '500m'
              memory: '256Mi'
